syntax = "proto3";

package ru.otus.generated;

option java_multiple_files = true;

message InMessage {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message OutMessage {
    int32 generatedValue = 1;
}

service RemoteService {
    rpc generate(InMessage) returns (stream OutMessage);
}
